# aigc-detector-toolkit

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  train.py  vite.config.js  webui.py
configs/: default.yaml
core/: binoculars_adapter.py  engine.py  evaluation.py  fengci_adapter.py  hc3_adapter.py  lastde_adapter.py  local_logprob_adapter.py  mimo_api_adapter.py  openai_adapter.py  progress.py  refiner.py  trainer.py
examples/: eval_sample.jsonl
extractors/: docx_extractor.py  md_extractor.py  text_extractor.py
models/fengci/: aigc_detector_model.joblib  aigc_detector_model.metadata.json
reporters/: console_reporter.py  html_reporter.py  json_reporter.py  refinement_html_reporter.py  text_reporter.py
scripts/: generate_sample_data.py
skills/aigc-detect/: INSTALL.md  SKILL.md
tests/: test_config.py  test_engine.py  test_evaluation.py  test_reporters.py
webui/: app.js  index.html  styles.css
webui/assets/: index-Bl0s4hWw.js  index-CtolCN3d.js  index-D62xuYAl.css  index-q5k_fzsJ.css
webui_src/: index.html
webui_src/src/: main.jsx  styles.css
