[project]
name = "aigc-detector-toolkit"
version = "0.1.0"
description = "Chinese AIGC text detector toolkit with ensemble, evaluation, and optional local logprob engines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "python-docx>=1.1",
    "jieba==0.42.1",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
hc3 = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
]
local-logprob = [
    "torch>=2.0",
    "transformers>=4.36",
]
all = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "transformers>=4.36",
]

[tool.uv]
package = false
